# Stick

./: .travis.yml  Allocator.hpp  CMakeLists.txt  ConditionVariable.cpp  ConditionVariable.hpp  Duration.hpp  DynamicArray.hpp  Error.hpp  ErrorCategory.cpp  ErrorCodes.hpp  FileUtilities.cpp  FileUtilities.hpp  HighResolutionClock.cpp  HighResolutionClock.hpp  Iterator.hpp  Mutex.cpp  Path.cpp  Path.hpp  RBTree.hpp  README.md  ScopedLock.hpp  StickAllocator.hpp  StickConditionVariable.cpp  StickConditionVariable.hpp  StickCore.hpp  StickDuration.hpp  StickDynamicArray.hpp  StickError.cpp  StickError.hpp  StickErrorCategory.cpp  StickErrorCategory.hpp  StickErrorCodes.hpp  StickFileUtilities.cpp  StickFileUtilities.hpp  StickHashMap.hpp  StickHighResolutionClock.cpp  StickHighResolutionClock.hpp  StickIterator.hpp  StickMap.hpp  StickMutex.cpp  (+26 more)
Stick/: Allocator.hpp  ArgumentParser.cpp  ArgumentParser.hpp  Array.hpp  BitmaskEnum.hpp  CallbackID.hpp  ConditionVariable.cpp  ConditionVariable.hpp  DefaultCleanup.hpp  Duration.hpp  DynamicArray.hpp  Error.cpp  Error.hpp  ErrorCategory.cpp  ErrorCategory.hpp  ErrorCodes.hpp  Event.cpp  Event.hpp  EventForwarder.hpp  EventPublisher.hpp  FileSystem.cpp  FileSystem.hpp  FileUtilities.cpp  FileUtilities.hpp  FixedArray.hpp  Hash.hpp  HashMap.hpp  HighResolutionClock.cpp  HighResolutionClock.hpp  Iterator.hpp  Map.hpp  Maybe.hpp  Mutex.cpp  Mutex.hpp  Path.cpp  Path.hpp  Platform.hpp  Print.hpp  RBTree.hpp  Resource.hpp  (+22 more)
Stick/Allocators/: Allocator.hpp  AllocatorUtilities.hpp  Block.hpp  Bucketizer.hpp  FallbackAllocator.hpp  FreeListAllocator.hpp  GlobalAllocator.hpp  LinearAllocator.hpp  Mallocator.hpp  MemoryChunk.hpp  NoAllocator.hpp  PoolAllocator.hpp  Segregator.hpp
Stick/Detail/: MurmurHash2.hpp  StickMurmurHash2.hpp
Stick/Private/: Callback.hpp  FunctionTraits.hpp  IndexSequence.hpp  MappedCallbackStorage.hpp  MurmurHash2.hpp  Singleton.hpp
Tests/: CMakeLists.txt  StickCoreTests.cpp  StickTests.cpp  meson.build
