add_executable (StickTests EXCLUDE_FROM_ALL StickTests.cpp)
set_target_properties(StickTests PROPERTIES COMPILE_FLAGS "-fsanitize=address")
set_target_properties(StickTests PROPERTIES LINK_FLAGS "-fsanitize=address")
target_link_libraries(StickTests Stick ${STICKDEPS})
add_custom_target(check COMMAND StickTests)